--- a/src/styles/ListItem.css
+++ b/src/styles/ListItem.css
@@ -3,6 +3,13 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0; 
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
 input:focus,
 select:focus,
 textarea:focus,
